--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <br>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
-        <img class="escola-imagem" src="/img/thumbnail.jpg" alt="Professora no quadro">
+        <img class="escola-imagem" src="/img/images.jpg" alt="alunos na aula">
     </section>
 </body>
 
