--- a/index.html
+++ b/index.html
@@ -39,22 +39,16 @@
             <div class="estudante-div">
                 <img class="estudante-imagem" src="" alt="foto do marcelo">
                 <h3 class="estudante-nome">Marcelo</h3>
-                <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="/img/github.png"
-                        alt="icone github"></a>
-                <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="/img/linkedin.png"
-                        alt="icone linkedin"></a>
-                <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="/img/instagram.png"
-                        alt="icone instagram"></a>
+                <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="/img/github.png" alt="icone github"></a>
+                <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="/img/linkedin.png" alt="icone linkedin"></a>
+                <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="/img/instagram.png" alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="/alunos/Maiara.jpg" alt="foto da Maiara">
                 <h3 class="estudante-nome">Maiara</h3>
-                <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                <img class="estudante-icone" src="/img/github.png" alt="icone github">
+                <img class="estudante-icone" src="/img/linkedin.png" alt="icone linkedin">
+                <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="/img/instagram.png" alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
