--- a/index.html
+++ b/index.html
@@ -37,88 +37,43 @@
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto do marcelo">
-                <h3 class="estudante-nome">Marcelo</h3>
-                <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="/img/github.png" alt="icone github"></a>
-                <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="/img/linkedin.png" alt="icone linkedin"></a>
-                <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="/img/instagram.png" alt="icone instagram"></a>
+                <img class="estudante-imagem" src="/alunos/Carlos.png" alt="foto do Carlos">
+                <h3 class="estudante-nome">Carlos</h3>
+                <a href="https://github.com/CarlosPassosMartins"><img class="estudante-icone" src="/img/github.png" alt="icone github"></a>
+                <img class="estudante-icone" src="/img/linkedin.png" alt="icone linkedin">
+                <a href="https://www.instagram.com/carlospamartins/"><img class="estudante-icone" src="/img/instagram.png" alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="/alunos/Maiara.jpg" alt="foto da Maiara">
                 <h3 class="estudante-nome">Maiara</h3>
                 <img class="estudante-icone" src="/img/github.png" alt="icone github">
                 <img class="estudante-icone" src="/img/linkedin.png" alt="icone linkedin">
-                <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="/img/instagram.png" alt="icone instagram"></a>
+                <a href="https://www.instagram.com/mayy_seven?igsh=MXcwc3poN3MyeHV2OQ=="><img class="estudante-icone" src="/img/instagram.png" alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
-                <h3 class="estudante-nome">Lizandra</h3>
-                <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png"
+                <img class="estudante-imagem" src="/alunos/emanuelly.jpg" alt="foto da Emanuelly">
+                <h3 class="estudante-nome">Emanuelly</h3>
+                <img class="estudante-icone" src="/img/github.png" alt="icone github"></a>
+                <img class="estudante-icone" src="/img/linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/emanuelly_macedo_amaral?igsh=MTRhZnppcWo0eWZkeA=="><img class="estudante-icone" src="/img/instagram.png"
                         alt="icone instagram"></a>
             </div>
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Joice.jpg" alt="foto da joice">
-                <h3 class="estudante-nome">Joice</h3>
-                <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png"
+                <img class="estudante-imagem" src="/alunos/suelen.jpg" alt="foto da Suelen">
+                <h3 class="estudante-nome">Suelen</h3>
+                <img class="estudante-icone" src="/img/github.png" alt="icone github">
+                <img class="estudante-icone" src="/img/linkedin.png"
                         alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png"
+                <a href="https://www.instagram.com/rosa_suelenn?igsh=MTR2aW4xNnp2ejM5eQ=="><img class="estudante-icone" src="/img/instagram.png"
                         alt="icone instagram"></a>
             </div>
-            <div class="estudante-div">
-                <img class="estudante-imagem" src="Maria.jpg" alt="foto da maria">
-                <h3 class="estudante-nome">Maria</h3>
-                <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png"
-                        alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
-            </div>
-            <div class="estudante-div">
-                <img class="estudante-imagem" src="Olivia.jpg" alt="foto da olhe">
-                <h3 class="estudante-nome">Olivia</h3>
-                <img class="estudante-icone" src="github.png" alt="icone github">
-                <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png"
-                        alt="icone linkedin"></a>
-                <a href="https://github.com/olhe12"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
-            </div>
-            <span></span>
-            <span></span>
-            <div class="estudante-div">
-                <img class="estudante-imagem" src="Rafa.jpg" alt="foto da rafa">
-                <h3 class="estudante-nome">Rafaela</h3>
-                <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
-            </div>
-            <div class="estudante-div">
-                <img class="estudante-imagem" src="Thais.jpg" alt="foto da thais">
-                <h3 class="estudante-nome">Thais</h3>
-                <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
-            </div>
-
         </div>
     </section>
     
     <footer class="rodape">
-        <img class="rodape-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="rodape-imagem" src="/img/logo novo colegio dulce.png" alt="logo da alura start">
     </footer>
 </body>
 
