--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="/alunos/suelen.jpg" alt="foto da Suelen">
+                <img class="estudante-imagem" src="/alunos/Suelen.jpg" alt="foto da Suelen">
                 <h3 class="estudante-nome">Suelen</h3>
                 <img class="estudante-icone" src="/img/github.png" alt="icone github">
                 <img class="estudante-icone" src="/img/linkedin.png"
