--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
     </section>
     
     <footer class="rodape">
+        <div>
         <img class="rodape-imagem" src="/img/logo novo colegio dulce.png" alt="logo da alura start">
+    </div>
+    <h3>COLÉGIO DULCE MASCHIO</h3>
     </footer>
 </body>
 
