--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="rodape-div">
         <img class="rodape-imagem" src="/img/logo novo colegio dulce.png" alt="logo da alura start">
     </div>
-    <h3 class="rodape-texto">COLÉGIO DULCE MASCHIO</h3>
+    <p>COLÉGIO DULCE MASCHIO</p>
     </footer>
 </body>
 
