--- a/index.html
+++ b/index.html
@@ -74,9 +74,13 @@
     
     <footer class="rodape">
         <div class="rodape-div">
+            <div>
         <img class="rodape-imagem" src="/img/logo novo colegio dulce.png" alt="logo da alura start">
     </div>
+    <div>
     <p>COLÉGIO DULCE MASCHIO</p>
+</div>
+</div>
     </footer>
 </body>
 
