--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <img class="rodape-imagem" src="/img/logo novo colegio dulce.png" alt="logo da alura start">
     </div>
     <div>
-    <p>COLÉGIO DULCE MASCHIO</p>
+    <h3>COLÉGIO DULCE MASCHIO</h3>
 </div>
 </div>
     </footer>
