--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     
     <footer class="rodape">
         <img class="rodape-imagem" src="/img/logo novo colegio dulce.png" alt="logo da alura start">
-    <h3>COLÉGIO DULCE MASCHIO</h3>
+        <h3 class="rodape-texto">COLÉGIO DULCE MASCHIO</h3>
 
     </footer>
 </body>
