--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
             <p class="escola-texto-um">O Colégio Estadual Prof. Dulce Maschio EMF foi fundada 
-                em 2002 e tem como objetivo ensinar com responsabilidade.</p>
+                em 2002 e tem como objetivo de educar com responsabilidade.</p>
             <br>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série B. Nós somos super unidos e 
                 a turma favorita por todos os professores e professoras que nos ajudam!</p>
