--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
     </section>
     
     <footer class="rodape">
-        <img class="rodape-imagem" src="/img/logo novo colegio dulce.png" alt="logo da alura start">
-        <h3 class="rodape-texto">COLÉGIO DULCE MASCHIO</h3>
-
+        <a href="https://www.parana.pr.gov.br/"><img src="/img/logo_parana.png" alt="logo parana></a>
     </footer>
 </body>
 
