--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </section>
     
     <footer class="rodape">
-        <a href="https://www.parana.pr.gov.br/"><img src="/img/logo_parana.png" alt="logo parana></a>
+        <a href="https://www.parana.pr.gov.br/"><img src="/img/logo_parana.png" alt="logo parana"></a>
     </footer>
 </body>
 
