--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </section>
     
     <footer class="rodape">
-        <a href="https://www.parana.pr.gov.br/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo parana"></a>
+        <a class="rodape-href" href="https://www.parana.pr.gov.br/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo parana"></a>
     </footer>
 </body>
 
