--- a/index.html
+++ b/index.html
@@ -23,13 +23,28 @@
     <section id="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">O Colégio Estadual Prof. Dulce Maschio EMF foi fundada 
-                em 2002 e tem como objetivo de educar com responsabilidade.</p>
+            <p class="escola-texto-um">Professora Dulce Maschio está localizado na Rua: Padre Jandir Luiz
+                Ferrari no 700 Bairro : Industrial.</p>
             <br>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série B. Nós somos super unidos e 
                 a turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
         <img class="escola-imagem" src="/img/fachada.jpg" alt="imagem que representa uma professora em sala de aula">
+    </section>
+    <section class="prof_dulce">
+        <h2 class="prof_dulce-titulo">Professora Dulce</h2>
+        <div class="prof_dulce-div">
+            <p>nascida em São
+                Mateus do Sul – Paraná, no dia 25 de novembro de 1941. Foi uma alfabetizadora por
+                excelência, trabalhando sempre com crianças carentes, pelas quais sempre demonstrou
+                especial carinho e competência profissional. Participou ativamente trabalhando na
+                comunidade, fez parte de Associação de Pais e Mestres e Movimentos Religiosos e prestou
+                relevantes serviços. Faleceu em 22 de Fevereiro de 1994.</p>
+        </div>
+        <div class="prof_dulce-img">
+            <img src="/img/Prof_Dulce2.jpg" alt="foto da professora dulce">
+            
+        </div>
     </section>
 
     <section id="estudante">
