--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
         </div>
         <img class="escola-imagem" src="/img/fachada.jpg" alt="imagem que representa uma professora em sala de aula">
     </section>
+
+
     <section class="prof_dulce">
-        <div class="prof_dulce-div">
+    <div class="prof_dulce-div">
+        <div class="prof_dulce-img">
+            <img src="/img/Prof_Dulce2.jpg" alt="foto da professora dulce">
+        </div>
+        <div class="pref_dulce-texto">
             <h2 class="prof_dulce-titulo">Professora Dulce</h2>
             <p>nascida em São
                 Mateus do Sul – Paraná, no dia 25 de novembro de 1941. Foi uma alfabetizadora por
@@ -41,10 +47,7 @@
                 comunidade, fez parte de Associação de Pais e Mestres e Movimentos Religiosos e prestou
                 relevantes serviços. Faleceu em 22 de Fevereiro de 1994.</p>
         </div>
-        <div class="prof_dulce-img">
-            <img src="/img/Prof_Dulce2.jpg" alt="foto da professora dulce">
-
-        </div>
+    </div>
     </section>
 
     <section id="estudante">
