--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             <p>nascida em São
                 Mateus do Sul – Paraná, no dia 25 de novembro de 1941. Foi uma alfabetizadora por
                 excelência, trabalhando sempre com crianças carentes, pelas quais sempre demonstrou
-                especial carinho e competência profissional. Participou ativamente trabalhando na
+                especial carinho e competência profissional. 
+                <br>
+                Participou ativamente trabalhando na
                 comunidade, fez parte de Associação de Pais e Mestres e Movimentos Religiosos e prestou
                 relevantes serviços. Faleceu em 22 de Fevereiro de 1994.</p>
         </div>
