--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
 
 
     <section class="prof_dulce">
-        <div class="prof_dulce-img">
-            <img src="/img/Prof_Dulce2.jpg" alt="foto da professora dulce">
-        </div>
+            <img class="prof_dulce-img" src="/img/Prof_Dulce2.jpg" alt="foto da professora dulce">
         <div class="pref_dulce-texto">
             <h2 class="prof_dulce-titulo">Professora Dulce</h2>
             <p>nascida em São
