--- a/index.html
+++ b/index.html
@@ -32,22 +32,16 @@
         <img class="escola-imagem" src="/img/fachada.jpg" alt="imagem que representa uma professora em sala de aula">
     </section>
 
-
-    <section class="prof_dulce">
-            <img class="prof_dulce-img" src="/img/Prof_Dulce2.jpg" alt="foto da professora dulce">
-        <div class="pref_dulce-texto">
-            <h2 class="prof_dulce-titulo">Professora Dulce</h2>
-            <p>nascida em São
-                Mateus do Sul – Paraná, no dia 25 de novembro de 1941. Foi uma alfabetizadora por
-                excelência, trabalhando sempre com crianças carentes, pelas quais sempre demonstrou
-                especial carinho e competência profissional.
-                </p>
-                <br>
-                <p>
-                Participou ativamente trabalhando na
-                comunidade, fez parte de Associação de Pais e Mestres e Movimentos Religiosos e prestou
-                relevantes serviços. Faleceu em 22 de Fevereiro de 1994.</p>
+    <section id="PDulce">
+        <div class="PDulce-div-conteudo">
+            <h2 class="PDulce-titulo">Sobre a Escola</h2>
+            <p class="PDulce-texto-um">Professora Dulce Maschio está localizado na Rua: Padre Jandir Luiz
+                Ferrari no 700 Bairro : Industrial.</p>
+            <br>
+            <p class="PDulce-texto-dois">A turma mais estudiosa e famosa é a Segunda Série B. Nós somos super unidos e 
+                a turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
+        <img class="PDulce-imagem" src="/img/Prof_Dulce2.jpg" alt="imagem que representa uma professora em sala de aula">
     </section>
 
     <section id="estudante">
