--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img class="escola-imagem" src="/img/fachada.jpg" alt="imagem que representa uma professora em sala de aula">
     </section>
 
-    <section id="PDulce">
+    <section class="PDulce">
         <div class="PDulce-div-conteudo">
             <h2 class="PDulce-titulo">Sobre a Escola</h2>
             <p class="PDulce-texto-um">Professora Dulce Maschio está localizado na Rua: Padre Jandir Luiz
