--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
         <img class="PDulce-imagem" src="/img/Prof_Dulce2.jpg" alt="imagem que representa uma professora em sala de aula">
         <div class="PDulce-div-conteudo">
             <h2 class="PDulce-titulo">Sobre a Escola</h2>
-            <p class="PDulce-texto-um">Professora Dulce Maschio está localizado na Rua: Padre Jandir Luiz
-                Ferrari no 700 Bairro : Industrial.</p>
+            <p class="PDulce-texto-um">Professora Dulce Francisca Mendes Maschio, nascida em São
+                Mateus do Sul – Paraná, no dia 25 de novembro de 1941. Foi uma alfabetizadora por
+                excelência, trabalhando sempre com crianças carentes, pelas quais sempre demonstrou
+                especial carinho e competência profissional.</p>
             <br>
-            <p class="PDulce-texto-dois">A turma mais estudiosa e famosa é a Segunda Série B. Nós somos super unidos e 
-                a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="PDulce-texto-dois">Participou ativamente trabalhando na
+                comunidade, fez parte de Associação de Pais e Mestres e Movimentos Religiosos e prestou
+                relevantes serviços. Faleceu em 22 de Fevereiro de 1994.</p>
         </div>
     </section>
 
