--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
     <section class="PDulce">
         <img class="PDulce-imagem" src="/img/Prof_Dulce2.jpg" alt="imagem que representa uma professora em sala de aula">
         <div class="PDulce-div-conteudo">
-            <h2 class="PDulce-titulo">Professora Dulce Francisca Mendes Maschio</h2>
-            <p class="PDulce-texto-um">Nascida em São Mateus do Sul – Paraná, no dia 25 de novembro 
-                de 1941. Foi uma alfabetizadora por excelência, trabalhando sempre com crianças carentes, 
-                pelas quais sempre demonstrou especial carinho e competência profissional.</p>
+            <h2 class="PDulce-titulo">Professora Dulce</h2>
+            <p class="PDulce-texto-um">Professora Dulce Francisca Mendes Maschio, nascida em São
+                Mateus do Sul – Paraná, no dia 25 de novembro de 1941. Foi uma alfabetizadora por
+                excelência, trabalhando sempre com crianças carentes, pelas quais sempre demonstrou
+                especial carinho e competência profissional.</p>
             <br>
             <p class="PDulce-texto-dois">Participou ativamente trabalhando na
                 comunidade, fez parte de Associação de Pais e Mestres e Movimentos Religiosos e prestou
