--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
             <li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li>
+            <li class="cabecalho-lista-item"><a href="#Prof-Dulce">professora Dulce</a></li>
         </ul>
     </header>
     <section id="escola">
@@ -39,7 +40,7 @@
 
     </section>
 
-    <section class="PDulce">
+    <section id="Prof-Dulce">
         <img class="PDulce-imagem" src="/img/Prof_Dulce2.jpg" alt="imagem que representa uma professora em sala de aula">
         <div class="PDulce-div-conteudo">
             <h2 class="PDulce-titulo">Professora Dulce</h2>
