--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <section id="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um"></p>a Escola Estadual Professora Dulce Maschio. Foi criada para 
+            <p class="escola-texto-um">a Escola Estadual Professora Dulce Maschio. Foi criada para 
             atender à demanda educacional no Bairro Industrial, oferecendo Ensino Fundamental do 6º 
-            ao 9º ano e Ensino Médio.
+            ao 9º ano e Ensino Médio.</p>
             <br>
             <p class="escola-texto-dois">Inicialmente, ela compartilhava espaço com a Escola Municipal 
             São Pedro, que atendia apenas à Educação Infantil e às Séries Iniciais do Ensino Fundamental.</p>
