--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
         <img class="escola-imagem" src="/img/fachada.jpg" alt="imagem que representa uma professora em sala de aula">
     </section>
     <section class="meio">
-        <h2 class="meio-titulo">Professora Dulce Maschio está localizado na</h2>
-        <h3 class="meio-texto"><a href="https://www.google.com/maps/place/Dulce+Maschio,+C+E+Profa-Ef+M/@-25.3534812,-51.4949546,21z/data=!4m15!1m8!3m7!1s0x94ef376ab977b1d7:0x2bb1052915098636!2sR.+Padre+Jandir+Luiz+Ferrari,+700+-+Industrial,+Guarapuava+-+PR,+85053-440!3b1!8m2!3d-25.353399!4d-51.4948269!16s%2Fg%2F11syq57z1g!3m5!1s0x94ef37e5c918ba0f:0xd243d058c7e7c843!8m2!3d-25.3534528!4d-51.4948948!16s%2Fg%2F11gj4h57t3?entry=ttu"> Rua: Padre Jandir Luiz
-            Ferrari no 700 Bairro : Industrial.</a></h3>
-
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d225.34577719015252!2d-51.49500085785092!3d-25.35346618789378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ef37e5c918ba0f%3A0xd243d058c7e7c843!2sDulce%20Maschio%2C%20C%20E%20Profa-Ef%20M!5e0!3m2!1spt-BR!2sbr!4v1714724531534!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
     <section id="Prof-Dulce">
