--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img class="cabecalho-imagem" src="/img/logo novo colegio dulce.png" alt="logo da Dulce">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
-            <li class="cabecalho-lista-item"><a href="#map">Localização</a></li>
+            <li class="cabecalho-lista-item"><a href="#Map">Localização</a></li>
             <li class="cabecalho-lista-item"><a href="#Prof-Dulce">professora Dulce</a></li>
             <li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li>
         </ul>
