--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             São Pedro, que atendia apenas à Educação Infantil e às Séries Iniciais do Ensino Fundamental.</p>
         </div>
         <img class="escola-imagem" src="/img/fachada.jpg" alt="imagem que representa uma professora em sala de aula">
-    
-    <div id="Map">
+    </section>
+    <section id="Map">
         <h1 class="map-titulo">Localização</h1>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d225.34577719015252!2d-51.49500085785092!3d-25.35346618789378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ef37e5c918ba0f%3A0xd243d058c7e7c843!2sDulce%20Maschio%2C%20C%20E%20Profa-Ef%20M!5e0!3m2!1spt-BR!2sbr!4v1714724531534!5m2!1spt-BR!2sbr" width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
     </section>
+
     <section id="Prof-Dulce">
         <img class="PDulce-imagem" src="/img/Prof_Dulce2.jpg" alt="imagem que representa uma professora em sala de aula">
         <div class="PDulce-div-conteudo">
