--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <img class="estudante-icone" src="/img/linkedin.png" alt="icone linkedin">
                 <a href="https://www.instagram.com/mayy_seven?igsh=MXcwc3poN3MyeHV2OQ=="><img class="estudante-icone" src="/img/instagram.png" alt="icone instagram"></a>
             </div>
+            <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="/alunos/emanuelly.jpg" alt="foto da Emanuelly">
                 <h3 class="estudante-nome">Emanuelly</h3>
