--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
                 <a href="https://www.instagram.com/emanuelly_macedo_amaral?igsh=MTRhZnppcWo0eWZkeA=="><img class="estudante-icone" src="/img/instagram.png"
                         alt="icone instagram"></a>
             </div>
+            <span></span>
+            <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="/alunos/Suelen.jpg" alt="foto da Suelen">
                 <h3 class="estudante-nome">Suelen</h3>
