--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             </div>
             <span></span>
             <span></span>
+            <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="/alunos/emanuelly.jpg" alt="foto da Emanuelly">
                 <h3 class="estudante-nome">Emanuelly</h3>
