--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <img class="estudante-icone" src="/img/linkedin.png" alt="icone linkedin">
                 <a href="https://www.instagram.com/carlospamartins/"><img class="estudante-icone" src="/img/instagram.png" alt="icone instagram"></a>
             </div>
+            <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="/alunos/Maiara.jpg" alt="foto da Maiara">
                 <h3 class="estudante-nome">Maiara</h3>
@@ -81,6 +82,7 @@
                 <a href="https://www.instagram.com/emanuelly_macedo_amaral?igsh=MTRhZnppcWo0eWZkeA=="><img class="estudante-icone" src="/img/instagram.png"
                         alt="icone instagram"></a>
             </div>
+            <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="/alunos/Suelen.jpg" alt="foto da Suelen">
                 <h3 class="estudante-nome">Suelen</h3>
