--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </section>
     
     <footer class="rodape">
-        <a class="rodape-href" href="https://www.parana.pr.gov.br/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo parana"></a>
+        <a class="rodape-href" href="https://www.educacao.pr.gov.br/iniciar/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo parana"></a>
     </footer>
 </body>
 
