--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <section id="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">a Escola Estadual Professora Dulce Maschio. Foi criada para 
+            <p class="escola-texto-um">A Escola Estadual Professora Dulce Maschio. Foi criada para 
             atender à demanda educacional no Bairro Industrial, oferecendo Ensino Fundamental do 6º 
             ao 9º ano e Ensino Médio.</p>
             <br>
             <p class="escola-texto-dois">Inicialmente, ela compartilhava espaço com a Escola Municipal 
             São Pedro, que atendia apenas à Educação Infantil e às Séries Iniciais do Ensino Fundamental.</p>
         </div>
-        <img class="escola-imagem" src="/img/fachada.jpg" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="/img/fachada.jpg" alt="imagem da fachada da escola Dulce Maschio">
     </section>
     <section id="Map">
         <h1 class="map-titulo">Localização</h1>
@@ -40,7 +40,7 @@
     </section>
 
     <section id="Prof-Dulce">
-        <img class="PDulce-imagem" src="/img/Prof_Dulce2.jpg" alt="imagem que representa uma professora em sala de aula">
+        <img class="PDulce-imagem" src="/img/Prof_Dulce2.jpg" alt="imagem da professora Dulce Francisca Mendes Maschio ">
         <div class="PDulce-div-conteudo">
             <h2 class="PDulce-titulo">Professora Dulce</h2>
             <p class="PDulce-texto-um">Professora Dulce Francisca Mendes Maschio, nascida em São Mateus do Sul – Paraná, no dia 25 de novembro 
