--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
     </section>
     
     <footer class="rodape">
-        <a class="rodape-href" href="https://www.educacao.pr.gov.br/iniciar/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo parana"></a>
+        <a class="rodape-href" href="https://www.educacao.pr.gov.br/iniciar/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo parana"></a> 
+        <div class="rodape-div-todos">
+            <a class="rodape-div-item" href="https://www.instagram.com/colegiodulcemaschio1/"><img src="/img/facebook_icon.png" alt="icone do Facebook"></a>
+            <a class="rodape-div-item" href="https://www.instagram.com/colegiodulcemaschio1/"><img src="/img/Instagram_icon.png" alt="icone do Instagram"></a>
+            <a class="rodape-div-item" href="https://api.whatsapp.com/send/?phone=554236248937&text&type=phone_number&app_absent=0"><img src="/img/whatsapp_icon.png" alt="icone do Whatsapp"></a>
+       </div>
     </footer>
 </body>
 
