--- a/index.html
+++ b/index.html
@@ -95,11 +95,7 @@
     
     <footer class="rodape">
         <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo da parana"></a>
-        <div class="rodape-lista">
-            <a href="https://www.facebook.com/colegiodulcemaschio/"><img class="rodape-div-item"  src="/img/facebook_icon.png" alt="icone do Facebook"></a>
-            <a href="https://www.instagram.com/colegiodulcemaschio1/"><img class="rodape-div-item"  src="/img/instagram_icon.png" alt="icone do Instagram"></a>
-            <a href="https://api.whatsapp.com/send/?phone=554236248937&text&type=phone_number&app_absent=0"><img class="rodape-div-item"  src="/img/whatsapp_icon.png" alt="icone do Whatsapp"></a>
-        </div>
+        <img src="/img/logo_parana.png" alt="asdasd">
     </footer>
 </body>
 
