--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
     
     <footer class="rodape">
         <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo da parana"></a>
-        <img src="/img/logo_parana.png" alt="asdasd">
+        <div>
+            <img src="/img/logo novo colegio dulce.png" alt="asdasd">
+        </div>
+
     </footer>
 </body>
 
