--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo da parana"></a>
         <div>
             <img src="/img/logo novo colegio dulce.png" alt="asdasd">
+            <img src="img/logo_parana.png" alt="dasda">
         </div>
 
     </footer>
