--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <footer class="rodape">
         <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo da parana"></a>
         <div>
-            <img src="/img/logo novo colegio dulce.png" alt="asdasd">
-            <img src="img/logo_parana.png" alt="dasda">
+            <img class="fofo" src="/img/instagram_icon.png" alt="asdasd">
+            <img class="fofo" src="img/facebook_icon.png" alt="dasda">
         </div>
 
     </footer>
