--- a/index.html
+++ b/index.html
@@ -95,10 +95,24 @@
     
     <footer class="rodape">
         <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo da parana"></a>
-        <div>
-            <img class="fofo" src="/img/instagram_icon.png" alt="asdasd">
-            <img class="fofo" src="img/facebook_icon.png" alt="dasda">
-        </div>
+        <ul id="accessibility-links" class="element-invisible">
+            <li class="opt-content"><a href="#main-content" accesskey="1"
+                title="Ir direto ao assunto principal - atalho nº1"
+                tabindex="2">Ir para o conteúdo</a></li>
+            <li class="opt-navigation"><a href="#main-navigation" accesskey="2"
+                title="Ir ao menu principal - atalho nº2" tabindex="3">Ir para a
+                navegação</a></li>
+            <li class="opt-search"><a href="#edit-termo" accesskey="3"
+                title="Ir para a busca - atalho nº3" tabindex="4">Ir para a
+                busca</a></li>
+            <li class="opt-accessibility"><a
+                href="https://www.pia.pr.gov.br/acessibilidade" accesskey="4"
+                title="Sobre a acessibilidade - atalho nº4"
+                tabindex="5">Acessibilidade</a></li>
+            <li class="opt-site-map"><a href="/sitemap" accesskey="5"
+                title="Ir ao mapa do site - atalho nº5" tabindex="6">Mapa do
+                site</a></li>
+          </ul>
 
     </footer>
 </body>
