--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <div>
             <img class="fofo" src="/img/instagram_icon.png" alt="asdasd">
             <img class="fofo" src="img/facebook_icon.png" alt="dasda">
+            <img class="fofo" src="img/whatsapp_icon.png" alt="dasda">
         </div>
 
     </footer>
