--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
     
     <footer class="rodape">
         <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo da parana"></a>
-        <div>
-            <img class="fofo" src="/img/instagram_icon.png" alt="asdasd">
-            <img class="fofo" src="img/facebook_icon.png" alt="dasda">
-            <img class="fofo" src="img/whatsapp_icon.png" alt="dasda">
+        <div class="rodape-div-redesS">
+            <img class="rodape-redesS" src="/img/instagram_icon.png" alt="logo instagram">
+            <img class="rodape-redesS" src="img/facebook_icon.png" alt="logo facebook">
+            <img class="rodape-redesS" src="img/whatsapp_icon.png" alt="logo whatsapp">
         </div>
 
     </footer>
