--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     <footer class="rodape">
         <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo da parana"></a>
         <div class="rodape-div-redesS">
-            <img class="rodape-redesS" src="/img/instagram_icon.png" alt="logo instagram">
-            <img class="rodape-redesS" src="img/facebook_icon.png" alt="logo facebook">
-            <img class="rodape-redesS" src="img/whatsapp_icon.png" alt="logo whatsapp">
+            <a href="https://www.instagram.com/explore/locations/104870288694163/colegio-professora-dulce-maschio---ensino-fundamental-e-medio/"><img class="rodape-redesS" src="/img/instagram_icon.png" alt="logo instagram"></a>
+            <a href="https://www.facebook.com/colegiodulcemaschio/"><img class="rodape-redesS" src="img/facebook_icon.png" alt="logo facebook"></a>
+            <a href="https://api.whatsapp.com/send/?phone=554236248937&text&type=phone_number&app_absent=0"><img class="rodape-redesS" src="img/whatsapp_icon.png" alt="logo whatsapp"></a>
         </div>
 
     </footer>
