--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="/img/logo novo colegio dulce.png" alt="logo da Dulce">
+       <a href="#"><img class="cabecalho-imagem" src="/img/logo novo colegio dulce.png" alt="logo da Dulce"></a>
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
             <li class="cabecalho-lista-item"><a href="#Map">Localização</a></li>
