--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <body>
     <header class="cabecalho">
+        <h1>Colegio Estadual Dulce Maschio</h1>
+        <div class="cabecalho-div">
         <img class="cabecalho-imagem" src="/img/logo novo colegio dulce.png" alt="logo da Dulce">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
@@ -21,6 +23,7 @@
             <li class="cabecalho-lista-item"><a href="#Prof-Dulce">professora Dulce</a></li>
             <li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li>
         </ul>
+    </div>
     </header>
     <section id="escola">
         <div class="escola-div-conteudo">
