--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="cabecalho">
-        <h1>Colegio Estadual Dulce Maschio</h1>
+        <h1 class="cabecalho-titulo">Colegio Estadual Dulce Maschio</h1>
         <div class="cabecalho-div">
         <img class="cabecalho-imagem" src="/img/logo novo colegio dulce.png" alt="logo da Dulce">
         <ul class="cabecalho-lista">
