--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     
     <footer class="rodape">
         <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo da parana"></a>
-       <h1 class="rodape-voutar"><a href="#home">VOUTAR</a></h1>
+       <h1 class="rodape-voutar"><a href="#">VOUTAR</a></h1>
         <div class="rodape-div-redesS">
             <a href="https://www.instagram.com/explore/locations/104870288694163/colegio-professora-dulce-maschio---ensino-fundamental-e-medio/"><img class="rodape-redesS" src="/img/instagram_icon.png" alt="logo instagram"></a>
             <a href="https://www.facebook.com/colegiodulcemaschio/"><img class="rodape-redesS" src="img/facebook_icon.png" alt="logo facebook"></a>
