--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
     </section>
     
     <footer class="rodape">
-        <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo da parana"></a>
+        <div class="rodape-parana">
+          <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="rodape-imagem" src="/img/logo_parana.png" alt="logo da parana"></a>
+            <p>© Secretaria da Educação <br> Av. Presidente Kennedy, 2511 - Guaíra80610-011 - Curitiba - PR - Localização 41 3340-1500</p>
+        </div>
        <h1 class="rodape-voutar"><a href="#">VOUTAR</a></h1>
         <div class="rodape-div-redesS">
             <a href="https://www.instagram.com/explore/locations/104870288694163/colegio-professora-dulce-maschio---ensino-fundamental-e-medio/"><img class="rodape-redesS" src="/img/instagram_icon.png" alt="logo instagram"></a>
