--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 indiceAtual = (indiceAtual + delta + imagens.length) % imagens.length;
     
                 // Obtém o elemento de imagem e atualiza seu atributo src para a nova imagem
-                var imagemElement = document.getElementById("imagem");
+                var imagemElement = document.getElementById("escola-imagem");
                 imagemElement.src = imagens[indiceAtual];
             }
         </script>
