--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="imagem-container">
             <img id="imagem" src="/img/fachada.jpg" alt="Imagem escola">
             <div class="botoes-container">
-                <button onclick="trocarImagem(-1)">&#9664;</button>
-                <button onclick="trocarImagem(1)">&#9654;</button>
+                <button onclick="trocarImagem(-1)">&#9664; voltar</button>
+                <button onclick="trocarImagem(1)"> proximo &#9654; </button>
             </div>
         </div>
     
